# sfhtml

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: demo.tape
python/: README.md  pyproject.toml
python/sfhtml/: __init__.py  cli.py
src/: applier.rs  browser.rs  creator.rs  diagnostic.rs  differ.rs  header.rs  history.rs  html_structure.rs  js_scope.rs  live.rs  locator.rs  main.rs  module_deps.rs  output.rs  page.rs  reader.rs  scanner.rs  search.rs  syntax_check.rs  timeout.rs  validator.rs
test/: dashboard.html  plain.html  todo.html  todo.html.bak.1773588172
test/components/: button.js
test/modules/: chart.js  store.js  utils.js
test/styles/: base.css  theme.css
tests/fixtures/: malformed.html  no_header.html  survey_app.html
tests/fixtures/module_test/: app.html
tests/fixtures/module_test/modules/: renderer.js  store.js
tests/fixtures/module_test/styles/: base.css
tests/integration/: apply_test.rs  create_test.rs  diff_test.rs  header_test.rs  history_test.rs  locate_test.rs  mod.rs  module_test.rs  page_test.rs  save_as_test.rs  scan_test.rs  search_test.rs  validate_test.rs
